# mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yml
dags/: monitor_drift.py
k8s/: deployment.yaml  mlflow-service.yaml  pod.yaml  service.yaml
src/: app.py  logger.py  predict.py  train.py
src/mlops_zero_to_hero.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/monitoring/: drift_detector.py  prediction_logger.py  retrain_trigger.py  store_predictions.py
tests/: test_api.py  test_registered_model.py  test_registry.py  test_train.py
