[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-zero-to-hero"
version = "0.1.0"
description = "A beginner MLOps project using the Iris dataset and Random Forest."
readme = "README.md"
requires-python = ">=3.10"
authors = [
{ name = "Hamid Mukhtar" }
]

dependencies = [
"scikit-learn>=1.5.0",
"pandas>=2.2.0",
"joblib>=1.4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
train-model = "train:main"
